--- a/app/src/main/res/layout/activity_resultat_round.xml
+++ b/app/src/main/res/layout/activity_resultat_round.xml
@@ -25,6 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:focusedByDefault="true"
         android:layout_weight="1"
         android:background="@drawable/it_style"
         app:layout_constraintStart_toEndOf="@id/res_spinner_round"
@@ -50,6 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:focusedByDefault="false"
         android:ems="10"
         android:hint="@string/resRoundFilter"
         app:layout_constraintStart_toEndOf="@id/res_lis_resultat"
