--- a/app/src/main/res/layout-land/activity_maintenance.xml
+++ b/app/src/main/res/layout-land/activity_maintenance.xml
@@ -58,11 +58,23 @@
         app:layout_constraintTop_toTopOf="@id/am_bSup_round" />
 
 
+    <TextView
+        android:id="@+id/TextOffset"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="12dp"
+        android:layout_weight="2"
+        android:gravity="center"
+        android:text="@string/pointageOffsetDesc"
+        app:layout_constraintStart_toStartOf="@+id/am_bexport_archer_rounds"
+        app:layout_constraintTop_toBottomOf="@+id/am_bexport_archer_rounds"
+        tools:text="@string/pointageOffsetDesc" />
+
     <EditText
         android:id="@+id/pointageOffset"
         android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="12dp"
         android:autofillHints="2"
         android:background="@drawable/it_style"
         android:ems="10"
@@ -73,8 +85,8 @@
         android:text="@string/pointageOffset"
         android:textAlignment="center"
         android:visibility="visible"
-        app:layout_constraintStart_toStartOf="@+id/am_bexport_archer_rounds"
-        app:layout_constraintTop_toBottomOf="@+id/am_bexport_archer_rounds" />
+        app:layout_constraintStart_toEndOf="@+id/TextOffset"
+        app:layout_constraintTop_toTopOf="@+id/TextOffset" />
 
     <Button
         android:id="@+id/am_bexport_archer_rounds"
@@ -83,8 +95,8 @@
         android:layout_marginTop="5dp"
         android:background="@drawable/am_buttonshape_grey"
         android:text="@string/am_bexport_archer_round"
-        app:layout_constraintStart_toStartOf="@+id/am_bSup_round"
-        app:layout_constraintTop_toBottomOf="@+id/am_bSup_round" />
+        app:layout_constraintStart_toStartOf="@id/am_bSup_round"
+        app:layout_constraintTop_toBottomOf="@id/am_bSup_round" />
 
     <Button
         android:id="@+id/am_bexport_round_archers"
@@ -112,11 +124,12 @@
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="360dp"
         android:layout_height="53dp"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="20dp"
+
         android:indeterminate="false"
         android:max="100"
         android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/pointageOffset"
+        app:layout_constraintStart_toEndOf="@id/pointageOffset"
         app:layout_constraintTop_toTopOf="@+id/pointageOffset" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -131,11 +144,14 @@
         android:id="@+id/r_maintenance_filter"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
-        app:layout_constraintStart_toStartOf="@+id/pointageOffset"
-        app:layout_constraintTop_toBottomOf="@+id/pointageOffset" />
+        android:autofillHints=""
+        android:hint="@string/resRoundFilter"
+        android:inputType="text"
+        app:layout_constraintStart_toStartOf="@+id/TextOffset"
+        app:layout_constraintTop_toBottomOf="@+id/TextOffset" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
