--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -117,7 +117,7 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
-                android:layout_marginRight="4dp"
+                android:layout_marginEnd="4dp"
                 android:gravity="center"
                 android:autofillHints="2"
                 android:background="@drawable/it_style"
@@ -237,7 +237,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                />
+                android:hint="@string/resRoundFilter"
+                android:autofillHints=""
+                android:inputType="text" />
         </TableRow>
     </TableLayout>
 
