--- a/app/src/main/res/layout/activity_resultat_round.xml
+++ b/app/src/main/res/layout/activity_resultat_round.xml
@@ -46,7 +46,7 @@
         app:layout_constraintEnd_toStartOf="@id/res_round_filter"
   />
 
-    <EditText
+    <TextView
         android:id="@+id/res_round_filter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
