--- a/app/src/main/res/layout/activity_config_round.xml
+++ b/app/src/main/res/layout/activity_config_round.xml
@@ -9,13 +9,17 @@
 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/table_layout1">
+    android:id="@+id/table_layout1"
+    android:weightSum="15"
+    >
+    <!-- android:weightSum="13"/-->
+
     <TableRow
-        android:id="@+id/tableRow1"
+        android:id="@+id/tableButtom1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:layout_constraintEnd_toEndOf="@id/tableRow12"
+        app:layout_constraintBottom_toTopOf="@id/tableButtom2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -85,14 +89,13 @@
     </TableRow>
 
     <TableRow
-        android:id="@+id/tableRow12"
+        android:id="@+id/tableButtom2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:layout_constraintLeft_toLeftOf="@id/tableRow1"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tableRow1"
-        app:layout_constraintTop_toBottomOf="@id/tableRow1">
+        app:layout_constraintTop_toBottomOf="@id/tableButtom1">
 
 
         <EditText
@@ -152,20 +155,20 @@
     </TableRow>
 
     <TableRow
-        android:id="@+id/tableArcheInBase"
+        android:id="@+id/tableArcherInBase"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="6"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/tableArcherInRound"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tableRow12">
+        app:layout_constraintTop_toBottomOf="@id/tableButtom2">
 
         <TextView
             android:id="@+id/textArcherInBase"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             android:layout_weight="1"
             android:ems="10"
             android:text="@string/archer_base" />
@@ -173,7 +176,7 @@
         <ListView
             android:id="@+id/archersBase"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="3"
             android:contentDescription="@string/archer_base"
             android:background="@drawable/it_style"
@@ -184,19 +187,20 @@
     <TableRow
         android:id="@+id/tableArcherInRound"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="6"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/tableFilter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tableArcheInBase">
+        app:layout_constraintTop_toBottomOf="@id/tableArcherInBase">
+
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
             android:layout_weight="1"
-            app:layout_constraintRight_toRightOf="@id/textArcherInBase"
+            app:layout_constraintRight_toRightOf="parent"
             android:orientation="vertical">
 
         <TextView
@@ -230,7 +234,7 @@
         android:orientation="vertical">
         <ListView
                 android:layout_width="match_parent"
-            	android:layout_height="wrap_content"
+            	android:layout_height="0dp"
             	android:layout_weight="3"
             	android:orientation="vertical"
                 android:choiceMode="singleChoice"
@@ -240,12 +244,12 @@
         </ListView>
     </LinearLayout>
     </TableRow>
-
     <TableRow
         android:id="@+id/tableFilter"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.5"
+        android:layout_weight="1"
+        android:stretchColumns="*"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -255,10 +259,13 @@
             android:id="@+id/roundQualifier"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:ems="10"
             android:hint="@string/RoundQualifier"
             android:inputType="none"
-            android:text="@string/RoundQualifier" />
+            android:shrinkColumns="*"
+            android:text="@string/RoundQualifier"
+            app:layout_constraintRight_toRightOf="parent"/>
 
     </TableRow>
 </TableLayout>
