--- a/app/src/main/res/layout/activity_gestion_filter.xml
+++ b/app/src/main/res/layout/activity_gestion_filter.xml
@@ -9,60 +9,74 @@
     <GridView
         android:id="@+id/gridChoice"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
+        android:layout_weight="10"
         android:layout_marginTop="4dp"
-        android:columnWidth="@android:dimen/app_icon_size"
+        android:columnWidth="80dp"
         android:gravity="center"
         android:horizontalSpacing="15dp"
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp"
-        app:layout_constraintEnd_toStartOf="@id/filterResult"
+        android:verticalSpacing="20dp"
+
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/filterResult"/>
 
 
     <TextView
         android:id="@+id/filterResult"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="3"
         android:layout_marginStart="8dp"
+        android:textSize="16sp"
         android:text="parametreRetour"
-        app:layout_constraintBottom_toTopOf="@id/gf_bp_valid"
-        app:layout_constraintStart_toStartOf="@id/gridChoice"
+        app:layout_constraintBottom_toTopOf="@id/buttom"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gridChoice"
-        app:layout_constraintVertical_bias="0.355" />
+        app:layout_goneMarginBottom="10dp" />
 
-
-    <Button
-        android:id="@+id/gf_bp_clear_filter"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:id="@+id/buttom"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
         android:layout_weight="1"
-        android:text="@string/bp_clear_filter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/filterResult">
 
+        <Button
+            android:id="@+id/gf_bp_clear_filter"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/bp_clear_filter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
-    <Button
-        android:id="@+id/gf_bp_cancel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/bp_cancel"
-        app:layout_constraintStart_toEndOf="@id/gf_bp_clear_filter"
-        app:layout_constraintTop_toTopOf="@+id/gf_bp_clear_filter"  />
-    <Button
-        android:id="@+id/gf_bp_valid"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/bp_valid"
-        app:layout_constraintStart_toEndOf="@id/gf_bp_cancel"
-        app:layout_constraintTop_toTopOf="@+id/gf_bp_cancel"
-        app:layout_constraintRight_toRightOf="parent"/>
+        <Button
+            android:id="@+id/gf_bp_cancel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/bp_cancel"
+            app:layout_constraintLeft_toRightOf="@id/gf_bp_clear_filter"
+            app:layout_constraintTop_toTopOf="@+id/gf_bp_clear_filter" />
 
+        <Button
+            android:id="@+id/gf_bp_valid"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/bp_valid"
+            app:layout_constraintLeft_toRightOf="@id/gf_bp_cancel"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/gf_bp_cancel" />
 
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
