template sur filtre modification et correction de config round

--- a/app/src/main/res/drawable/it_style.xml
+++ b/app/src/main/res/drawable/it_style.xml
@@ -10,7 +10,9 @@
 
     <size
         android:width="0dp"
-        android:height="0dp" />
+        android:height="0dp"
+        android:layout_marginStart="2dp"
+        />
 
     <stroke
         android:width="1dp"
