--- a/app/src/main/res/drawable/it_style_spinner.xml
+++ b/app/src/main/res/drawable/it_style_spinner.xml
@@ -1,23 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="10dp" />
-    <padding
-        android:bottom="3dp"
-        android:left="3dp"
-        android:right="3dp"
-        android:top="3dp" />
+<selector xmlns:android="http://schemas.android.com/apk/res/android" >
+   <item>
+    <layer-list>
+       <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="10dp" />
+                <padding
+               android:bottom="3dp"
+                android:left="3dp"
+                android:right="3dp"
+            android:top="3dp" />
 
-    <size
-        android:width="0dp"
-        android:height="0dp" />
+            <stroke
+            android:width="1dp"
+            android:color="#878787"
+            android:drawSelectorOnTop="true"
+            android:isScrollContainer="true"
+            android:keepScreenOn="true"
+            android:spinnerMode="dropdown"
+            android:textAlignment="center" />
+        </shape>
+         </item>
+        <item>
+        <bitmap
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"
+            android:gravity="end|bottom|clip_vertical"
+            android:src="@drawable/spinner_arrow_down"/>
 
-    <stroke
-        android:width="1dp"
-        android:color="#878787"
-        android:drawSelectorOnTop="true"
-        android:isScrollContainer="true"
-        android:keepScreenOn="true"
-        android:spinnerMode="dropdown"
-        android:textAlignment="center" />
-</shape>
+        </item>
+    </layer-list >
+   </item>
+</selector>
