--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="spinner_style" parent="Widget.AppCompat.Spinner">
+        <item name="background">@drawable/it_style</item>
+</style>
+
 </resources>
